Fix connection string.

--- a/src/App.config
+++ b/src/App.config
@@ -8,7 +8,7 @@
     <add key="UseWindowsAuth" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="fileaudit" connectionString="server=mongodb://localhost:27017;database=FileAuditManager" />
+    <add name="fileaudit" connectionString="mongodb://localhost:27017/FileAuditManager?ssl=false" />
   </connectionStrings>
   <log4net>
     <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
