Add the AuditManager and update the ApplicationHashingManager.

--- a/src/App.config
+++ b/src/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="uri" value="http://*:8080/" />
     <add key="UseWindowsAuth" value="false"/>
+    <add key="AuditTimerInMilliseconds" value="120000"/>
   </appSettings>
   <connectionStrings>
     <add name="fileaudit" connectionString="mongodb://localhost:27017/FileAuditManager?ssl=false" />
