--- a/src/packages.config
+++ b/src/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="log4net" version="2.0.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
@@ -13,4 +14,5 @@
   <package id="MongoDB.Driver.Core" version="2.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="structuremap" version="4.0.1.318" targetFramework="net46" />
 </packages>
