Support a list of regular expressions that exclude files from the hash.  This is saved in the application object.

--- a/src/App.config
+++ b/src/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="uri" value="http://*:8080/" />
     <add key="UseWindowsAuth" value="false"/>
+    <!-- Anything less than 20 seconds turns the timer off. -->
     <add key="AuditTimerInMilliseconds" value="60000"/>
   </appSettings>
   <connectionStrings>
