Lots of refactoring of controllers.

--- a/src/FileAuditManager.csproj
+++ b/src/FileAuditManager.csproj
@@ -102,6 +102,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuditManager.cs" />
+    <Compile Include="Controllers\Models\ModifiedApplication.cs" />
+    <Compile Include="Controllers\Models\NewDeployment.cs" />
     <Compile Include="DIContainer.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\AuditController.cs" />
