--- a/src/App.config
+++ b/src/App.config
@@ -4,10 +4,15 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
-    <add key="uri" value="http://*:8080/" />
+    <add key="ListenUrl" value="http://*:8080/" />
     <add key="UseWindowsAuth" value="false"/>
-    <!-- Anything less than 20 seconds turns the timer off. -->
-    <add key="AuditTimerInMilliseconds" value="600000"/>
+    <!-- Anything less than 60 seconds will turn off the audit timer. -->
+    <add key="AuditTimerInMilliseconds" value="60000"/>
+    <add key="AuditEmailToAddress" value="steven.swenson@mailtrust.com"/>
+    <add key="AuditEmailFromAddress" value="noreply@mailtrust.com"/>
+    <add key="MailgunUrl" value=""/>
+    <add key="MailgunApiKey" value=""/>
+    <add key="SendMailOnAuditFailure" value="true"/>
   </appSettings>
   <connectionStrings>
     <add name="fileaudit" connectionString="mongodb://localhost:27017/FileAuditManager?ssl=false" />
