Refactor some of the logging.

--- a/src/App.config
+++ b/src/App.config
@@ -7,12 +7,12 @@
     <add key="ListenUrl" value="http://*:8080/" />
     <add key="UseWindowsAuth" value="false"/>
     <!-- Anything less than 60 seconds will turn off the audit timer. -->
-    <add key="AuditTimerInMilliseconds" value="60000"/>
-    <add key="AuditEmailToAddress" value="steven.swenson@mailtrust.com"/>
-    <add key="AuditEmailFromAddress" value="noreply@mailtrust.com"/>
+    <add key="AuditTimerInMilliseconds" value="3600000"/>
+    <add key="AuditEmailToAddress" value=""/>
+    <add key="AuditEmailFromAddress" value=""/>
     <add key="MailgunUrl" value=""/>
     <add key="MailgunApiKey" value=""/>
-    <add key="SendMailOnAuditFailure" value="true"/>
+    <add key="SendMailOnAuditFailure" value="false"/>
   </appSettings>
   <connectionStrings>
     <add name="fileaudit" connectionString="mongodb://localhost:27017/FileAuditManager?ssl=false" />
@@ -24,8 +24,24 @@
         <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
       </layout>
     </appender>
-    <root>
-      <level value="WARN" />
+    <appender name="RequestLogAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:\logs\requests.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="2100KB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+    <logger name="RequestLog" additivity="false">
+      <level value="ALL" />
+      <appender-ref ref="RequestLogAppender" />
+    </logger>
+    <root additivity="false">
+      <level value="INFO" />
       <appender-ref ref="EventLogAppender" />
     </root>
   </log4net>
