--- a/src/FileAuditManager.csproj
+++ b/src/FileAuditManager.csproj
@@ -103,10 +103,11 @@
   <ItemGroup>
     <Compile Include="AuditManager.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="Controllers\ApiHttpConfiguration.cs" />
-    <Compile Include="Controllers\LowercaseRouteConstraint.cs" />
+    <Compile Include="Controllers\Registration\ApiHttpConfiguration.cs" />
+    <Compile Include="Controllers\Registration\LowercaseRouteConstraint.cs" />
     <Compile Include="Controllers\Models\ModifiedApplication.cs" />
     <Compile Include="Controllers\Models\NewDeployment.cs" />
+    <Compile Include="Controllers\Validation\RequestValidationHandler.cs" />
     <Compile Include="Data\Models\FileHash.cs" />
     <Compile Include="DIContainer.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
@@ -125,7 +126,7 @@
     <Compile Include="Mail\IMailService.cs" />
     <Compile Include="Mail\MailService.cs" />
     <Compile Include="StructureMapRegistry.cs" />
-    <Compile Include="Controllers\FileAuditManagerHttpControllerActivator.cs" />
+    <Compile Include="Controllers\Registration\FileAuditManagerHttpControllerActivator.cs" />
     <Compile Include="Hashing\ApplicationHashingService.cs" />
     <Compile Include="Logging\ApiRequestLogger.cs" />
     <Compile Include="Data\Models\Application.cs" />
