Added response formatting to health controller. Changed audit timer from milliseconds to seconds.

--- a/src/App.config
+++ b/src/App.config
@@ -5,9 +5,14 @@
   </configSections>
   <appSettings>
     <add key="ListenUrl" value="http://*:8080/" />
+    <add key="HealthResponseContentType" value="application/json"/>
+    <!-- {status:"<%=status%>",server:"<%=host%>",uptimeseconds:"<%=uptime%>"} -->
+    <add key="HealthResponseFormatString" value="%7Bstatus%3A%22%3C%25%3Dstatus%25%3E%22%2Cserver%3A%22%3C%25%3Dhost%25%3E%22%2Cuptimeseconds%3A%22%3C%25%3Duptime%25%3E%22%7D"/>
+    <add key="HealthResponseUpStatusString" value="Healthy"/>
+    <add key="HealthResponseDownStatusString" value="OOR"/>
     <add key="UseWindowsAuth" value="false"/>
     <!-- Anything less than 60 seconds will turn off the audit timer. -->
-    <add key="AuditTimerInMilliseconds" value="3600000"/>
+    <add key="AuditTimerInSeconds" value="3600"/>
     <add key="AuditEmailToAddress" value=""/>
     <add key="AuditEmailFromAddress" value=""/>
     <add key="MailgunUrl" value=""/>
