Make the path to the health controller configurable.

--- a/src/App.config
+++ b/src/App.config
@@ -5,6 +5,7 @@
   </configSections>
   <appSettings>
     <add key="ListenUrl" value="http://*:8080/" />
+    <add key="HealthControllerPath" value="health"/>
     <add key="HealthResponseContentType" value="application/json"/>
     <!-- {status:"<%=status%>",server:"<%=host%>",uptimeseconds:"<%=uptime%>"} -->
     <add key="HealthResponseFormatString" value="%7Bstatus%3A%22%3C%25%3Dstatus%25%3E%22%2Cserver%3A%22%3C%25%3Dhost%25%3E%22%2Cuptimeseconds%3A%22%3C%25%3Duptime%25%3E%22%7D"/>
